# portfolio-website

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: admin.py  models.py  translation.py  urls.py  views.py
app/admin/: __init__.py  certification.py  experience.py  formation.py  mixins.py  parler.py  profile.py  project.py  skill.py  skill_area.py  topic.py
app/forms/: base.py  contact.py  widgets.py
app/migrations/: 0001_initial.py  0002_skill_topic_remove_project_technologies_and_more.py  0003_skillarea_alter_about_options_remove_about_skills_and_more.py  0004_profile_delete_about_skillarea_index.py  0005_alter_topic_name_taguloustopic_and_more.py  0006_remove_project_tagulous_topics_and_more.py  0007_topic_certification_topics_experience_topics_and_more.py  0008_certification_url.py  0009_project_company_project_end_date_project_start_date_and_more.py  0010_rename_image_projectimage_alter_project_company.py  0011_certification_created_at_certification_updated_at_and_more.py  0012_alter_projectimage_image.py  0013_certification_description_en_and_more.py  0013_news_newstranslation.py  0014_backfill_pt_br_translations.py  0014_remove_experience_company_and_more.py  0015_alter_project_company.py
app/models/: __init__.py  base.py  certification.py  experience.py  formation.py  parler.py  (+5 more)
portfolio_website/: settings.py  urls.py
scripts/: deploy-app.sh
templates/: index.html
(+31 files in other folders)
